--- a/index.html
+++ b/index.html
@@ -21,7 +21,6 @@
     <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.3.9/angular-touch.min.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/underscore.js/1.7.0/underscore-min.js"></script>
     <script src="//twemoji.maxcdn.com/twemoji.min.js"></script>
-    <script src="//dl.atte.fi/lib/berrymotes.js"></script>
     <script type="text/javascript" src="3rdparty/inflate.min.js"></script>
     <script type="text/javascript" src="js/localstorage.js"></script>
     <script type="text/javascript" src="js/weechat.js"></script>
@@ -470,5 +469,6 @@ $ openssl req -nodes -newkey rsa:4096 -keyout relay.pem -x509 -days 365 -out rel
         </div><!-- /.modal-content -->
       </div><!-- /.modal-dialog -->
     </div><!-- /.modal -->
+    <script ng-if="enableBerrymotes" ng-src="//dl.atte.fi/lib/berrymotes.js"></script>
   </body>
 </html>
