make hiding of nsfw embeds configurable

--- a/index.html
+++ b/index.html
@@ -366,7 +366,17 @@ $ openssl req -nodes -newkey rsa:4096 -keyout relay.pem -x509 -days 365 -out rel
                   <div class="checkbox">
                     <label>
                       <input type="checkbox" ng-model="noembed">
-                       Hide embedded content by default<span class="text-muted settings-help">NSFW content will be hidden regardless of this choice</span>
+                       Hide all embedded content by default
+                    </label>
+                  </div>
+                </form>
+              </li>
+              <li>
+                <form class="form-inline" role="form">
+                  <div class="checkbox">
+                    <label>
+                      <input type="checkbox" ng-model="hidensfw">
+                       Hide NSFW embedded content by default
                     </label>
                   </div>
                 </form>
