--- a/index.html
+++ b/index.html
@@ -370,16 +370,18 @@ $ openssl req -nodes -newkey rsa:4096 -keyout relay.pem -x509 -days 365 -out rel
                     </label>
                   </div>
                 </form>
-              </li>
-              <li>
-                <form class="form-inline" role="form">
-                  <div class="checkbox">
-                    <label>
-                      <input type="checkbox" ng-model="hidensfw">
-                       Hide NSFW embedded content by default
-                    </label>
-                  </div>
-                </form>
+                <ul ng-show="!noembed">
+                  <li>
+                    <form class="form-inline" role="form">
+                      <div class="checkbox">
+                        <label>
+                          <input type="checkbox" ng-model="hidensfw">
+                           Hide NSFW embedded content by default
+                        </label>
+                      </div>
+                    </form>
+                  </li>
+                </ul>
               </li>
               <li>
                 <form class="form-inline" role="form">
