--- a/index.html
+++ b/index.html
@@ -447,6 +447,16 @@ $ openssl req -nodes -newkey rsa:4096 -keyout relay.pem -x509 -days 365 -out rel
                 <form class="form-inline" role="form">
                   <div class="checkbox">
                     <label>
+                      <input type="checkbox" ng-model="showDesktopNotifications">
+                      Show desktop notifications
+                    </label>
+                  </div>
+                </form>
+              </li>
+              <li>
+                <form class="form-inline" role="form">
+                  <div class="checkbox">
+                    <label>
                       <input type="checkbox" ng-model="soundnotification">
                       Play sound on notification
                     </label>
